Update Azure KMS to Java 8 compatibility and add unit tests
- Fixed Files.readString() usage (Java 11+) to use Files.readAllBytes() for Java 8 compatibility
- Created AzureSessionConfigTest with comprehensive unit tests
- Tests verify constructor, getters/setters, null handling, and various Azure URL formats
- All tests passing with Java 8 target